highlighting green with a different color so it's noticeably selected

--- a/src/components/ColorPalette.css
+++ b/src/components/ColorPalette.css
@@ -13,9 +13,10 @@
     border-radius: 100%;
 }
 .ColorPalette-colorSelected {
-    width: 100px;
-    height: 100px;
     border: 3px solid var(--primary-color);
+}
+.ColorPalette-colorSelectedGreen {
+    border: 3px solid var(--secondary-color);
 }
 .ColorPalette-row {
     display: flex;
