--- a/client/src/components/GuesserSidePanel.css
+++ b/client/src/components/GuesserSidePanel.css
@@ -9,7 +9,11 @@
     margin: 20px;
     margin-left: 50px;
     overflow: scroll;
-    height: 80vh;
+    height: 75vh;
+}
+/* Hide scrollbr for Chrome */
+.GuesserSidePanel-container::-webkit-scrollbar {
+    display: none;
 }
 .GuesserSidePanel-guesses {
     display: table;
