adding way for drawers to see guesses of guessers

--- a/client/src/components/GuesserSidePanel.css
+++ b/client/src/components/GuesserSidePanel.css
@@ -11,7 +11,7 @@
     overflow: scroll;
     height: 75vh;
 }
-/* Hide scrollbr for Chrome */
+/* Hide scrollbar for Chrome */
 .GuesserSidePanel-container::-webkit-scrollbar {
     display: none;
 }
