--- a/client/src/components/DrawHelper.css
+++ b/client/src/components/DrawHelper.css
@@ -18,4 +18,6 @@
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
+    padding-left: 15px;
+    padding-right: 15px;
 }
