--- a/client/src/components/Canvas.css
+++ b/client/src/components/Canvas.css
@@ -9,6 +9,6 @@
 .Canvas-canvas {
     border: 2px solid var(--primary-color);
     border-radius: 4px;
-    height: 800px;
-    width: 1200px;
+    height: 80vh;
+    width: 62.5vw;
 }
